<resources>
    <string name="app_name">internship project</string>
    <string name="Login_here">Login here</string>
    <string name="welcome">Welcome back you\'ve \n been missed!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">create new account</string>
    <string name="submit">Submit</string>
    <string name="signup">Sign up</string>
    <string name="create_account_signup">Create Account</string>
    <string name="create_account_dic">create an account so you can explore all the existing jobs</string>
    <string name="name">Name</string>
    <string name="contact">Contact No</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_accounnt">Already have an account</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="f_password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>