<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">


    <EditText
        android:id="@+id/profile_name"
        style="@style/edit_16"
        android:hint="@string/name"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/profile"
        android:inputType="text"
        android:layout_marginTop="@dimen/_50sdp" />

    <EditText
        android:id="@+id/profile_contact"
        style="@style/edit_16"
        android:hint="@string/contact"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/phone"
        android:inputType="number"
        android:maxLength="10"
        android:layout_marginTop="@dimen/_10sdp" />

    <EditText
        android:id="@+id/profile_email"
        style="@style/edit_16"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/mail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/_10sdp" />

    <EditText
        android:id="@+id/profile_password"
        style="@style/edit_16"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_10sdp" />

    <EditText
        android:visibility="gone"
        android:id="@+id/profile_confirm_password"
        style="@style/edit_16"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_10sdp" />

    <Button
        android:visibility="visible"
        android:id="@+id/edit_profile"
        style="@style/button_16"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp" />

    <Button
        android:visibility="gone"
        android:id="@+id/submit"
        style="@style/button_16"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp" />

   
</LinearLayout>