<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/bg_style"
    tools:context=".MainActivity">

    <TextView
        style="@style/text_20"
        android:text="@string/f_password"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/blue" />

    <EditText
        android:id="@+id/f_email"
        style="@style/edit_16"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/mail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/_40sdp" />

    <EditText
        android:id="@+id/f_password"
        style="@style/edit_16"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_10sdp" />

    <EditText
        android:id="@+id/f_confrim_password"
        style="@style/edit_16"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_10sdp" />

    <Button
        android:id="@+id/change_password"
        style="@style/button_16"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp" />

</LinearLayout>