<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/text_20"
        android:text="@string/create_account"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/blue" />

    <TextView
        style="@style/text_14"
        android:text="@string/create_account_dic"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signup_name"
        style="@style/edit_16"
        android:hint="@string/signup_name"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/profile"
        android:inputType="text"
        android:layout_marginTop="@dimen/_10sdp" />
    <EditText
        android:id="@+id/signup_contact"
        style="@style/edit_16"
        android:hint="@string/signup_contact"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/phone"
        android:inputType="number"
        android:maxLength="10"
        android:layout_marginTop="@dimen/_10sdp" />

    <EditText
        android:id="@+id/signup_email"
        style="@style/edit_16"
        android:hint="@string/email"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/mail"
        android:inputType="textEmailAddress"
        android:layout_marginTop="@dimen/_10sdp" />

    <EditText
        android:id="@+id/signup_password"
        style="@style/edit_16"
        android:hint="@string/password"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_10sdp" />

    <EditText
        android:id="@+id/signup_confirm_password"
        style="@style/edit_16"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/gray"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_10sdp" />

    <Button
        android:id="@+id/signup"
        style="@style/button_16"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp" />

    <TextView
        android:id="@+id/signup_already_account"
        style="@style/text_14"
        android:text="@string/already_accounnt"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:textStyle="bold" />

</LinearLayout>