<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/bg_style"
    tools:context=".MainActivity">


    <TextView
        style="@style/text_20"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/Login_here"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <TextView
        style="@style/text_20"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/main_email"
        style="@style/edit_16"
        android:layout_marginTop="@dimen/_40sdp"
        android:drawableLeft="@drawable/mail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gray" />

    <FrameLayout
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/main_password"
            style="@style/edit_16"
            android:drawableLeft="@drawable/lock"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/gray" />

        <ImageView
            android:id="@+id/main_password_hide"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/hidden"
            android:padding="@dimen/_2sdp" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/main_password_show"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/view"
            android:padding="@dimen/_2sdp" />


    </FrameLayout>

    <TextView
        android:id="@+id/main_forgotpassword"
        style="@style/text_14"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:text="@string/forgot_password"
        android:textColor="@color/blue"
        android:textStyle="bold" />

    <Button
        android:id="@+id/main_signin"
        style="@style/button_16"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/sign_in"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/main_createaccount"
        style="@style/text_14"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/create_account"
        android:textStyle="bold" />

</LinearLayout>